--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+<html lang="zh-TW">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>臺南市115年度糖尿病患眼底檢查醫療院所</title>
+
+<meta property="og:title" content="臺南市115年度糖尿病患眼底檢查醫療院所">
+<meta property="og:description" content="提供臺南市糖尿病患眼底檢查合作院所查詢服務">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://cdn-icons-png.flaticon.com/512/2966/2966327.png">
+
+</head>
+<body>
+
 <!-- 封面區 -->
 <div style="
 background: linear-gradient(135deg, #0f4c8a, #0b1b2b);
@@ -113,4 +128,8 @@ font-size:14px;
 臺南市政府衛生局 © 2026
 </div>
 
+
 </div>
+
+</body>
+</html>
