--- a/diabetes_eye.html.html
+++ b/diabetes_eye.html.html
@@ -131,7 +131,7 @@ box-shadow:0 2px 6px rgba(0,0,0,0.05);
 
         <input type="text" id="searchInput"
         placeholder="搜尋院所名稱..."
-        onkeyup="searchClinic()"
+        oninput="filterClinics()"
         style="
         padding:10px;
         border-radius:6px;
@@ -372,6 +372,28 @@ function searchClinic(){
 /* 初始載入 */
 renderClinics(clinics);
 
+<script>
+function filterClinics() {
+    const keyword = document.getElementById("searchInput").value.toLowerCase();
+    const district = document.getElementById("districtFilter").value;
+
+    const cards = document.querySelectorAll(".clinic-card");
+
+    cards.forEach(card => {
+        const name = card.dataset.name.toLowerCase();
+        const area = card.dataset.district;
+
+        const matchName = name.includes(keyword);
+        const matchDistrict = district === "" || area === district;
+
+        if (matchName && matchDistrict) {
+            card.style.display = "block";
+        } else {
+            card.style.display = "none";
+        }
+    });
+}
+    
 </script>
 
 <!-- 底部返回區 -->
@@ -398,6 +420,7 @@ margin:50px 0 40px 0;
 
 </body>
 </html>
+
 
 
 
