--- a/diabetes_eye.html.html
+++ b/diabetes_eye.html.html
@@ -393,7 +393,7 @@ text-align:center;
 margin:50px 0 40px 0;
 ">
 
-    <a href="diabetes_eye.html" style="
+    <a href="index" style="
         background:#1fa2ff;
         color:white;
         padding:12px 30px;
@@ -411,6 +411,7 @@ margin:50px 0 40px 0;
 
 </body>
 </html>
+
 
 
 
