--- a/diabetes_eye.html.html
+++ b/diabetes_eye.html.html
@@ -404,13 +404,14 @@ margin:50px 0 40px 0;
         display:inline-block;
         box-shadow:0 2px 6px rgba(0,0,0,0.15);
     ">
-        返回說明頁
+        返回首頁
     </a>
 
 </div>
 
 </body>
 </html>
+
 
 
 
