--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ padding: 70px 20px;
 text-align: center;
 ">
 
-    <h1 style="font-size:48px; margin-bottom:12px;">
+    <h1 style="font-size:40px; margin-bottom:12px;">
         115年度臺南市糖尿病患可執行眼底檢查醫療院所
     </h1>
 
@@ -125,7 +125,8 @@ color:#888;
 background:#f4f7fb;
 font-size:14px;
 ">
-臺南市政府衛生局 © 2026
+臺南市政府衛生局｜國民健康科 © 2026
+臺南市新營區東興路163號｜06-6357716
 </div>
 
 
@@ -133,4 +134,5 @@ font-size:14px;
 
 </body>
 </html>
+
 
