--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ color:#888;
 background:#f4f7fb;
 font-size:14px;
 ">
-臺南市政府衛生局｜國民健康科 © 2026
+臺南市政府衛生局｜國民健康科 © 2026<br>
 臺南市新營區東興路163號｜06-6357716
 </div>
 
@@ -134,5 +134,6 @@ font-size:14px;
 
 </body>
 </html>
+
 
 
