--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@ color:#888;
 background:#f4f7fb;
 font-size:14px;
 ">
-臺南市政府衛生局｜國民健康科 © 2026<br>
-臺南市新營區東興路163號｜06-6357716
+🏛️臺南市政府衛生局｜國民健康科 © 2026<br>
+📍臺南市新營區東興路163號｜06-6357716
 </div>
 
 
@@ -134,6 +134,7 @@ font-size:14px;
 
 </body>
 </html>
+
 
 
 
