--- a/index.html
+++ b/index.html
@@ -81,6 +81,36 @@ body {
 
 <body>
 
+<!-- 頁面主標頭 -->
+<div style="
+background: linear-gradient(135deg, #0f4c8a, #1f4f82);
+color: white;
+padding: 40px 20px;
+text-align: center;
+">
+
+    <h1 style="margin:0; font-size:30px; letter-spacing:1px;">
+        115年度臺南市糖尿病患可執行眼底檢查醫療院所
+    </h1>
+
+    <p style="
+    margin-top:15px;
+    font-size:18px;
+    color:#d6e6f5;
+    ">
+        糖尿病患者建議每年接受一次眼底檢查，及早發現糖尿病視網膜病變，守護您的視力健康
+    </p>
+
+    <p style="
+    margin-top:10px;
+    font-size:14px;
+    color:#a8c4de;
+    ">
+        臺南市政府衛生局｜健康服務專區
+    </p>
+
+</div>
+    
 <!-- 搜尋區 -->
 <div style="
 background:white;
@@ -88,10 +118,6 @@ padding:30px 20px;
 text-align:center;
 box-shadow:0 2px 6px rgba(0,0,0,0.05);
 ">
-
-    <h2 style="margin-bottom:5px;">
-        115年度臺南市糖尿病患可執行眼底檢查醫療院所
-    </h2>
 
     <p style="color:#888; margin-bottom:20px;">
         更新日期：115年2月11日
@@ -387,43 +413,19 @@ renderClinics(clinics);
   
 </script>
 
-<!-- 底部返回區 -->
 <div style="
 text-align:center;
-margin:50px 0 40px 0;
+padding:30px;
+color:#888;
+background:#f4f7fb;
+font-size:14px;
 ">
+🏛️臺南市政府衛生局｜國民健康科 © 2026<br>
+📍臺南市新營區東興路163號｜06-6357716
+</div>
 
-    <a href="index" style="
-        background:#1fa2ff;
-        color:white;
-        padding:12px 30px;
-        border-radius:8px;
-        text-decoration:none;
-        font-size:16px;
-        font-weight:500;
-        display:inline-block;
-        box-shadow:0 2px 6px rgba(0,0,0,0.15);
-    ">
-        返回 👉首頁
-    </a>
 
 </div>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
